@@ -27,11 +27,11 @@ ylabel('exp')
 
 
 # turn off the 2nd axes rectangle with frameon kwarg
-ax2 = twin() 
+ax2 = twinx()
 s2 = sin(2*pi*t)
 plot(t, s2, 'r.')
 ylabel('sin')
-xlim(0.01, 10)
-set(gca(), xscale='log')
+#xlim(0.01, 10)
+#set(gca(), xscale='log')
 
 show()
